2006-05-??  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 0.9.7
	* New module: Mergetime [request: Stefanie Legutke]
	* New operator: abs (Math) [request: Reiner Schnur]
	* enlarge: update for zonal and meridional data [request: Wolfgang Mueller]
	* gradsdes: bug fix for unsorted GRIB data [report: Stefan Bauer]
	* Change help info format
	* extent macro UNCHANGED_RECORD to cdoDefaultDataType and cdoDefaultByteorder
	* remove module docu from source code
	* Version 0.9.13 released

2006-03-08  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 0.9.6
	* New module: Wind (uv2dv, dv2uv) <- docu missing
	* New module: Histogram (histcount, histsum, histmean) <- docu missing
	* New operator: sinfop (Sinfo)
	* Intgrid: missing value support for intgrid
	* Cat: the output file must not exist anymore
	* Zonstat: add support for GRID_GENERIC if ny > 1
	* read_remap_scrip: if GME grid, read GME mask (bug fix [Luis])
	* remaplib: change read/write of grid corners (bug fix)
	* Spectral: rename sp2gp2/gp2sp2 to sp2gpl/gp2spl
	* namelist: update
	* Version 0.9.12 released
	
2006-02-01  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 0.9.5
	* use marco DBL_IS_EQUAL to check floating-point equality
	* use taxisCopyTimestep if posible
	* New operator: sp2gp2 (Spectral) for ERA40 data
	* New operator: gp2sp2 (Spectral) for ERA40 data
	* New operator: replace (Replace)
	* New operator: specinfo to print info for spectral transformation
	* New module: Selstat (selmin, selmax, selsum, selmean, selavg, selstd)
	* New module: Mergegrid (mergegrid) <- docu missing
	* Runstat: adjust date and time
	* Merge: duplicate taxis (bug fix)
	* Vertint: abort for different grids (bug fix)
	* Gradsdes: set XYHEADER to 644 (bug fix Holger)
	* Remap: add GME grid support
	* Remap: use environment variable NORMLIZE_OPT (bug fix)
	* Cat: set tsID2 to 1 for input files with constant data only
	* zaxis: add vct support for hybrid levels