@@ -5,6 +5,7 @@
 	* New operator: abs (Math) [request: Reiner Schnur]
 	* enlarge: update for zonal and meridional data [request: Wolfgang Mueller]
 	* gradsdes: bug fix for unsorted GRIB data [report: Stefan Bauer]
+	* Vardup: bug fix for missing values
 	* Change help info format
 	* extent macro UNCHANGED_RECORD to cdoDefaultDataType and cdoDefaultByteorder
 	* remove module docu from source code
